--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "01357122-exercise11.js"
+    "start": "node 01357122-exercise11.js"
   },
   "keywords": [],
   "author": "",
